Small fixes, correcting documentations and endpoints for offices, categories and providers
