# app/controllers/office.controller.go
@@ -7,6 +7,7 @@ import (
 	"time"
 	"net/http"
 	"lunchapi/app/errors"
+	"github.com/uniplaces/carbon"
 )
 
 type OfficeController struct {
@@ -20,6 +21,7 @@ type OfficeController struct {
 // @Success 200 {array} models.Office
 // @Success 401 {object} errors.RequestError
 // @Router /offices/index [get]
+// @Security Authorization
 // @Tags Offices
 func (c OfficeController) Index() revel.Result {
 	//Deny Unauthorized users
@@ -38,4 +40,60 @@ func (c OfficeController) Index() revel.Result {
 	}
 
 	return c.RenderJSON(offices)
+}
+
+// @Summary Add or update Offices
+// @Description Add or update Offices
+// @Accept  json
+// @Produce  json
+// @Param body body models.Office true "Office Details"
+// @Success 200 {object} models.Office
+// @Success 401 {object} errors.RequestError
+// @Success 403 {object} errors.RequestError
+// @Router /offices/save [post]
+// @Security Authorization
+// @Tags Offices
+func (c OfficeController) Save() revel.Result {
+	//Deny Unauthorized users
+	if authorized := AuthCheck(c.Request); !authorized {
+		c.Response.Status = http.StatusUnauthorized
+		return c.RenderJSON(errors.ErrorUnauthorized(""))
+	}
+
+	user := AuthGetCurrentUser(c.Request)
+
+	if user.Role.Name != "admin" {
+		c.Response.Status = http.StatusForbidden
+		return c.RenderJSON(errors.ErrorForbidden("Only admin can add or update offices"))
+	}
+
+	var officeData, office models.Office
+	c.Params.BindJSON(&officeData)
+
+	if officeData.Id != 0 {
+		DB.
+			Where("id = ?", officeData.Id).
+			Preload("Title").
+			First(&office)
+
+		if office.Id == 0 {
+			c.Response.Status = http.StatusNotFound
+			return c.RenderJSON(errors.ErrorNotFound("Unable to find office based on your request"))
+		}
+
+		office.Title.En = officeData.Title.En
+		office.Title.Ua = officeData.Title.Ua
+		office.Title.Ru = officeData.Title.Ru
+		office.Title.UpdatedAt = carbon.Now().Time
+		officeData.Title = office.Title
+	}
+
+	DB.Create(&officeData)
+	DB.Save(&officeData)
+
+	offices := []models.Office{}
+	DB.Preload("Title").Find(&offices)
+	go cache.Set("office_index", offices, 30*time.Minute)
+
+	return c.RenderJSON(officeData)
 }
